--- a/root/index.html
+++ b/root/index.html
@@ -12,7 +12,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <script src="data.js" defer type="module"></script>
         <script src="app.js" defer type="module"></script>
     </head>
