implemented scss styling

--- a/root/index.html
+++ b/root/index.html
@@ -12,9 +12,9 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <link rel="stylesheet" href="css/style.css" />
-        <script src="data.js" defer type="module"></script>
-        <script src="app.js" defer type="module"></script>
+        <link rel="stylesheet" href="css/main.css" />
+        <script src="js/data.js" defer type="module"></script>
+        <script src="js/app.js" defer type="module"></script>
     </head>
     <body>
         <article class="container">
