implemented isntructions page

--- a/root/index.html
+++ b/root/index.html
@@ -14,9 +14,16 @@
         />
         <link rel="stylesheet" href="css/main.css" />
         <script src="js/data.js" defer type="module"></script>
-        <script src="js/app.js" defer type="module"></script>
+        <script src="js/main.js" defer type="module"></script>
     </head>
     <body>
+        <aside class="side-bar">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="instructions.html">Instructions</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </aside>
         <article class="container">
             <div class="header">
                 <h1>Quiz app</h1>
