implemented about and contact pages

--- a/root/index.html
+++ b/root/index.html
@@ -19,9 +19,10 @@
     <body>
         <aside class="side-bar">
             <ul>
-                <li><a href="#">About</a></li>
+                <li class="current"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="instructions.html">Instructions</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </aside>
         <article class="container">
