--- a/root/instructions.html
+++ b/root/instructions.html
@@ -13,13 +13,14 @@
             referrerpolicy="no-referrer"
         />
         <link rel="stylesheet" href="css/main.css" />
-        <script src="js/about.js" defer type="module"></script>
+        <script src="js/others.js" defer type="module"></script>
     </head>
     <body>
         <aside class="side-bar">
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="instructions.html">Instructions</a></li>
+                <li class="current"><a href="instructions.html">Instructions</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </aside>
