--- a/root/instructions.html
+++ b/root/instructions.html
@@ -33,21 +33,37 @@
             <div class="flex-col">
                 <div class="step">
                     <h2>Step 1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maiores exercitationem nam corporis a nemo non cum accusamus, commodi earum, quisquam voluptates asperiores neque minus dolore consequuntur sit in numquam.</p>  
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maiores exercitationem nam
+                        corporis a nemo non cum accusamus, commodi earum, quisquam voluptates asperiores neque minus
+                        dolore consequuntur sit in numquam.
+                    </p>
                 </div>
                 <div class="step">
                     <h2>Step 2</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maiores exercitationem nam corporis a nemo non cum accusamus, commodi earum, quisquam voluptates asperiores neque minus dolore consequuntur sit in numquam.</p>  
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maiores exercitationem nam
+                        corporis a nemo non cum accusamus, commodi earum, quisquam voluptates asperiores neque minus
+                        dolore consequuntur sit in numquam.
+                    </p>
                 </div>
                 <div class="step">
                     <h2>Step 3</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maiores exercitationem nam corporis a nemo non cum accusamus, commodi earum, quisquam voluptates asperiores neque minus dolore consequuntur sit in numquam.</p>  
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maiores exercitationem nam
+                        corporis a nemo non cum accusamus, commodi earum, quisquam voluptates asperiores neque minus
+                        dolore consequuntur sit in numquam.
+                    </p>
                 </div>
                 <div class="step">
                     <h2>Step 4</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maiores exercitationem nam corporis a nemo non cum accusamus, commodi earum, quisquam voluptates asperiores neque minus dolore consequuntur sit in numquam.</p>  
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maiores exercitationem nam
+                        corporis a nemo non cum accusamus, commodi earum, quisquam voluptates asperiores neque minus
+                        dolore consequuntur sit in numquam.
+                    </p>
                 </div>
-                
+            </div>
         </article>
     </body>
 </html>
