--- a/root/index.html
+++ b/root/index.html
@@ -19,10 +19,18 @@
     <body>
         <aside class="side-bar">
             <ul>
-                <li class="current"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="instructions.html">Instructions</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="current">
+                    <a href="index.html"><i class="fa fa-home"></i> <span> Home</span> </a>
+                </li>
+                <li>
+                    <a href="about.html"><i class="fa-solid fa-circle-info"></i> <span>About</span></a>
+                </li>
+                <li>
+                    <a href="instructions.html"><i class="fa-solid fa-wrench"></i> <span>Instructions</span></a>
+                </li>
+                <li>
+                    <a href="contact.html"><i class="fa-solid fa-phone"></i> <span>Contact</span></a>
+                </li>
             </ul>
         </aside>
         <article class="container">
